--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
+/* library */
+@import "~normalize.css";
+
+body {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.2;
+  font-size: 16px;
+  color: #202020;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 0;
+  background-color: inherit;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
