--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header__wrap">
-      <button class="header__create">
+      <button (click)="openAddNewUser()" class="header__create">
         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M3.73223 5.73223C4.20107 5.26339 4.83696 5 5.5 5H9C9.27614 5 9.5 5.22386 9.5 5.5C9.5 5.77614 9.27614 6 9 6H5.5C5.10218 6 4.72064 6.15804 4.43934 6.43934C4.15804 6.72064 4 7.10218 4 7.5V14.5C4 14.8978 4.15804 15.2794 4.43934 15.5607C4.72064 15.842 5.10218 16 5.5 16H12.5C12.8978 16 13.2794 15.842 13.5607 15.5607C13.842 15.2794 14 14.8978 14 14.5V11C14 10.7239 14.2239 10.5 14.5 10.5C14.7761 10.5 15 10.7239 15 11V14.5C15 15.163 14.7366 15.7989 14.2678 16.2678C13.7989 16.7366 13.163 17 12.5 17H5.5C4.83696 17 4.20107 16.7366 3.73223 16.2678C3.26339 15.7989 3 15.163 3 14.5V7.5C3 6.83696 3.26339 6.20107 3.73223 5.73223Z" fill="black" />
           <path fill-rule="evenodd" clip-rule="evenodd" d="M14.5 2C14.7761 2 15 2.22386 15 2.5V8.5C15 8.77614 14.7761 9 14.5 9C14.2239 9 14 8.77614 14 8.5V2.5C14 2.22386 14.2239 2 14.5 2Z" fill="black" />
